--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@ body {
   box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
   overflow: hidden;
   width: 300px;
+  scroll-behavior: smooth;
 }
 
 .title {
@@ -36,13 +37,13 @@ body {
 }
 
 .header {
-  background-color: #3e57db;
+  background-color: tomato;
   color: #fff;
   padding: 30px 20px;
 }
 
 .header input {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.2);
   border: 0;
   border-radius: 50px;
   color: #fff;
@@ -67,6 +68,7 @@ header input:focus {
 .user-list li {
   display: flex;
   padding: 20px;
+  cursor: pointer;
 }
 
 .user-list img {
